# cyberpunk_archipelago

./: .gitignore  .gitmodules  .redscript  AGENTS.md  CONTRIBUTING.md  README.md  cyberpunkap_beacon_37257d.txt  pyrightconfig.json
.github/workflows/: release-artifacts.yml
Cyberpunk2077/r6/scripts/CyberPunkArchipelago/Cyberpunk2077_Archipelago_Client/: APArchipelagoIdMappings.reds  APClient.reds  APConstants.reds  APDistrictEnforcer.reds  APDistrictManager.reds  APGameState.reds  APGameSystem.reds  APInventoryHandler.reds  APItemList.reds  APItemParser.reds  APItemProgression.reds  APModLogger.reds  APNCPDHustleFacts.reds  APNGPlusBridge.reds  APNativeBindings.reds  APPhoneSystem.reds  APQuestHandler.reds  APQuestLocationLookup.reds  APTrapSystem.reds  APVendorItem.reds  APVendorStockCleaner.reds  APVendorStockHelper.reds  APVendorTransactionReader.reds  APWeaponRestrictionEnforcer.reds  TCPClient.reds
Wolvenkit Project/: CyberpunkArchipelagoMod.cpmodproj  custom_refs.txt  install_log.xml  layout.xml
Wolvenkit Project/.projectFiles/: fileTreeState.json
Wolvenkit Project/packed/archive/pc/mod/: CyberpunkArchipelagoMod.archive
Wolvenkit Project/packed/r6/scripts/CyberPunkArchipelago/: BUGFIX_SAVE_LOAD_SYNC.md  MIGRATION_EXAMPLES.md  PHASE_2_COMPLETE.md  REFACTOR_GUIDE.md
Wolvenkit Project/source/resources/: .redscript  bin  r6
cyberpunk_archipelago-wolvenkitproj/: custom_refs.txt  cyberpunk_archipelago-wolvenkitproj.cpmodproj  install_log.xml  layout.xml
cyberpunk_archipelago-wolvenkitproj/.projectFiles/: fileTreeState.json
cyberpunk_archipelago-wolvenkitproj/packed/archive/pc/mod/: cyberpunk_archipelago-wolvenkitproj.archive  cyberpunk_archipelago-wolvenkitproj.archive.xl
cyberpunk_archipelago-wolvenkitproj/packed/r6/tweaks/cyberpunk_archipelago-wolvenkitproj/: vendor_checks.yaml  vendor_checks_0_common.yaml  vendor_checks_1_ripperdoc.yaml  vendor_checks_2_gunsmith.yaml  vendor_checks_3_clothing.yaml  vendor_checks_5_netrunner.yaml  vendor_checks_README.md
cyberpunk_archipelago-wolvenkitproj/source/archive/archipelago/: ap-icons.inkatlas  ap-icons.xbm  ap-icons_1080.xbm  black-icon.xbm  blue-icon.xbm  color-icon.xbm  white-icon.xbm
cyberpunk_archipelago-wolvenkitproj/source/archive/localization/en-us/: ap-strings.json
native/: .gitignore  CMakeLists.txt  README.md  generate_tables.py
native/APCpp/: Archipelago.cpp  Archipelago.h  CMakeLists.txt
native/build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CyberpunkArchipelagoNative.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  APCpp.sln  APCpp.vcxproj  APCpp.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/IXWebSocket/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  ixwebsocket.sln  ixwebsocket.vcxproj  ixwebsocket.vcxproj.filters
native/build-test/APCpp/jsoncpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  jsoncpp.sln
native/build-test/APCpp/jsoncpp/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/jsoncpp/pkg-config/: jsoncpp.pc
native/build-test/APCpp/jsoncpp/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/jsoncpp/src/lib_json/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  jsoncpp_object.vcxproj  jsoncpp_object.vcxproj.filters  jsoncpp_static.vcxproj
native/build-test/APCpp/mbedtls_bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mbed TLS.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  apidoc.vcxproj  apidoc.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/mbedtls_bin/framework/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/mbedtls_bin/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/APCpp/mbedtls_bin/pkgconfig/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
native/build-test/cyberpunk_ap_plugin/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  cyberpunk_ap_plugin.vcxproj  cyberpunk_ap_plugin.vcxproj.filters
native/cyberpunk_ap_plugin/: CMakeLists.txt
native/cyberpunk_ap_plugin/src/: APBridge.cpp  APBridge.hpp  DebugLog.hpp  RedscriptAPI.cpp  RedscriptAPI.hpp  plugin.cpp
native/src/: APBridge.cpp  APBridge.hpp  DisplayNameMapping.hpp  ItemMapping.hpp  LocationMapping.hpp  main.cpp
poptracker/templates/scripts/: autotracking.lua  init.lua
poptracker/templates/scripts/autotracking/: archipelago.lua
tools/: README.md  build_cyberpunk2077_apworld.py  build_poptracker_pack.py  build_release.py  build_wolvenkit_project.py  package_cyberpunk_mod_zip.py
worlds/cyberpunk2077/: .apignore  TCP_TEST_SERVER.md  __init__.py  archipelago.json  client.py  items.py  locations.py  options.py  regions.py  rules.py  test_server.py
worlds/cyberpunk2077/test/: __init__.py  bases.py  test_completion_goals.py  test_deathlink.py  test_defaults.py  test_district_restrictions.py  test_location_graph.py  test_quest_chains.py  test_token_locality.py  test_vendor_sanity.py
worlds/cyberpunk2077/tests/: __init__.py  conftest.py  test_client_commands.py  test_tcp_protocol.py
worlds/cyberpunk2077/tools/: generate_poptracker_pack.py  generate_redscript_ap_mappings.py
(+80 files in other folders)
